# tagmemo-py

./: .gitignore  README.md  app.py  config.env.example  pyproject.toml  rag_params.json
docs/: REFACTORING_PLAN.md  REFACTORING_REVIEW.md  REFACTORING_REVIEW_V2.md  REFACTORING_REVIEW_V3.md  memory-parity-gap-report-20260305.md  memory-parity-remaining-integration-gaps.md  memory-test-report-20260304-171035.md  vcp-full-gap-audit-20260305.md  vcp-memory-audit-20260310.md  vcp-memory-audit1.md  vcp-memory-audit2.md  vcp-memory-audit3.md
docs/plans/: 2026-03-09-algorithm-parity-fixes-design.md
proxy/: README.md
proxy/antigravity/: README.md
proxy/common/: request_inspector.py
proxy/copilot/: README.md
proxy/gemini/: README.md  server.py
scripts/: diary_semantic_classifier.py  diary_tag_batch_processor.py  test_search_fix.py
tagmemo/: AIMemoPrompt.txt  __init__.py  ai_memo.py  audit_logger.py  context_vector.py  embedding_service.py  embedding_utils.py  engine.py  epa.py  knowledge_base.py  meta_chain_vector_cache.json  meta_thinking.py  path_utils.py  reranker.py  residual_pyramid.py  result_deduplicator.py  runtime_events.py  semantic_groups.py  text_chunker.py  text_sanitizer.py  time_expressions.py  time_parser.py  vcp_compat.py  vector_index.py
tests/: conftest.py  test_admin_db_serialization.py  test_advanced_handlers_parity.py  test_algorithm_parity.py  test_audit_logger.py  test_context_vector.py  test_engine_audit1.py  test_epa.py  test_gemini_proxy.py  test_knowledge_base_plugin_cache.py  test_memory_delete.py  test_path_resolution.py  test_runtime_events.py  test_text_chunker.py  test_text_sanitizer.py  test_time_parser.py  test_vcp_compat.py  test_vector_index.py
(+4 files in other folders)
